--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@lark-base-open/js-sdk": "^0.3.8",
+    "@lark-base-open/node-sdk": "^1.0.1",
     "vue": "^3.4.21"
   },
   "devDependencies": {
