--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@lark-base-open/js-sdk": "^0.3.8",
     "@lark-base-open/node-sdk": "^1.0.1",
+    "element-plus": "^2.6.1",
     "vue": "^3.4.21"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.1.6",
     "vue-tsc": "^1.8.27"
   }
