--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@lark-base-open/js-sdk": "^0.3.8",
+    "@lark-base-open/js-sdk": "https://lf3-static.bytednsdoc.com/obj/eden-cn/jjjpceh7nulojvhj/@lark-base-open-js-sdk-0.4.1-rc.7.tgz",
     "@lark-base-open/node-sdk": "^1.0.1",
     "element-plus": "^2.6.1",
     "vue": "^3.4.21"
