--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "@lark-base-open/js-sdk": "https://lf3-static.bytednsdoc.com/obj/eden-cn/jjjpceh7nulojvhj/@lark-base-open-js-sdk-0.4.1-rc.7.tgz",
     "@lark-base-open/node-sdk": "^1.0.1",
+    "@types/file-saver": "^2.0.7",
     "element-plus": "^2.6.1",
-    "vue": "^3.4.21"
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
+    "vue": "^3.4.21",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
